crud edit functionnal no external constraints

--- a/src/main/resources/templates/fragments/missions/new-missions.html
+++ b/src/main/resources/templates/fragments/missions/new-missions.html
@@ -36,19 +36,17 @@
                         <td th:text="${newMission.status}"></td>
                         <td>
                             <!-- Planifier -->
-                            <a class="btn btn-success btn-sm" th:href="@{/missions/plan/new/{id}(id=${newMission.id})}"><i class="bi bi-calendar-plus"></i></a>
+                            <a class="btn btn-success btn-sm" th:href="@{/missions/plan/new/{id}(id=${newMission.uuid})}"><i class="bi bi-calendar-plus"></i></a>
                             <!-- Editer -->
-                            <a class="btn btn-primary btn-sm" th:href="@{/missions/edit/new/{id}(id=${newMission.id})}"><i class="bi bi-pencil-square"></i></a>
+                            <a class="btn btn-primary btn-sm" th:href="@{/missions/edit/new/{id}(id=${newMission.uuid})}"><i class="bi bi-pencil-square"></i></a>
                             <!-- Supprimer -->
-                            <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteMissionModal" th:attr="data-mission-id=${newMission.id}"><i class="bi bi-trash"></i></button>
+                            <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteMissionModal" th:attr="data-mission-id=${newMission.uuid}"><i class="bi bi-trash"></i></button>
                             <!-- Voir -->
-                            <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${newMission.id})}"><i class="bi bi-eye"></i></a>
+                            <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${newMission.uuid})}"><i class="bi bi-eye"></i></a>
                         </td>
                     </tr>
                     </tbody>
                 </table>
-                <!-- <div class="table-responsive">
-                 </div>-->
             </div>
             <div class="card-footer">
             </div>
