--- a/src/main/resources/templates/fragments/missions/completed-missions.html
+++ b/src/main/resources/templates/fragments/missions/completed-missions.html
@@ -39,7 +39,7 @@
                         <td th:text="${#temporals.format(completedMission.endDateTime, 'dd/MM/yyyy HH:mm')}"></td>
                         <td>
                             <!-- Voir -->
-                            <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${completedMission.id})}"><i class="bi bi-eye"></i></a>
+                            <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${completedMission.uuid})}"><i class="bi bi-eye"></i></a>
                         </td>
                     </tr>
                     </tbody>
