--- a/src/main/resources/templates/fragments/missions/confirmed-missions.html
+++ b/src/main/resources/templates/fragments/missions/confirmed-missions.html
@@ -40,11 +40,11 @@
                         <td th:text="${#temporals.format(confirmedMission.endDateTime, 'dd/MM/yyyy HH:mm')}"></td>
                         <td>
                             <!-- Editer -->
-                            <a class="btn btn-primary btn-sm" th:href="@{/missions/edit/{id}(id=${confirmedMission.id})}"><i class="bi bi-pencil-square"></i></a>
+                            <a class="btn btn-primary btn-sm" th:href="@{/missions/edit/{id}(id=${confirmedMission.uuid})}"><i class="bi bi-pencil-square"></i></a>
                             <!-- Supprimer -->
-                            <a class="btn btn-danger btn-sm" th:href="@{/missions/delete/{id}(id=${confirmedMission.id})}"><i class="bi bi-trash"></i></a>
+                            <a class="btn btn-danger btn-sm" th:href="@{/missions/delete/{id}(id=${confirmedMission.uuid})}"><i class="bi bi-trash"></i></a>
                             <!-- Voir -->
-                            <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${confirmedMission.id})}"><i class="bi bi-eye"></i></a>
+                            <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${confirmedMission.uuid})}"><i class="bi bi-eye"></i></a>
                         </td>
                     </tr>
                     </tbody>
