--- a/src/main/resources/templates/fragments/missions/ongoing-missions.html
+++ b/src/main/resources/templates/fragments/missions/ongoing-missions.html
@@ -39,9 +39,12 @@
                         <td th:text="${#temporals.format(ongoingMission.endDateTime, 'dd/MM/yyyy HH:mm')}"></td>
                         <td>
                             <!-- Annuler -->
-                            <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#cancelMissionModal" th:attr="data-mission-id=${ongoingMission.id}"><i class="bi bi-x-square"></i></button>
+                            <button type="button" class="btn btn-sm btn-danger"
+                                    data-bs-toggle="modal"
+                                    data-bs-target="#cancelMissionModal"
+                                    th:attr="data-mission-id=${ongoingMission.uuid}"><i class="bi bi-x-square"></i></button>
                             <!-- Voir -->
-                            <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${ongoingMission.id})}"><i class="bi bi-eye"></i></a>
+                            <a class="btn btn-info btn-sm" th:href="@{/missions/{id}(id=${ongoingMission.uuid})}"><i class="bi bi-eye"></i></a>
                         </td>
                     </tr>
                     </tbody>
