--- a/src/main/resources/templates/mission-types/edit-type.html
+++ b/src/main/resources/templates/mission-types/edit-type.html
@@ -10,9 +10,8 @@
                 <h1>Mise à jour</h1>
             </div>
             <div class="card-body">
-                <form th:action="@{/mission-types/update/{id}(id=${missionType.id})}" id="editMissionTypeForm" method="post" th:object="${missionType}">
+                <form th:action="@{/mission-types/update/{id}(id=${missionType.uuid})}" id="editMissionTypeForm" method="post" th:object="${missionType}">
                     <input type="hidden" name="uuid" id="uuid" th:field="*{uuid}">
-                    <input type="hidden" name="id" id="id" th:field="*{id}">
                     <div class="form-group">
                         <label for="name" class="col-form-label">Type de Mission :</label>
                         <input th:field="*{name}" type="text" id="name" class="form-control" required="required" autocomplete="off">
