--- a/src/main/resources/templates/volunteers/volunteer/edit-volunteer.html
+++ b/src/main/resources/templates/volunteers/volunteer/edit-volunteer.html
@@ -10,9 +10,8 @@
             </div>
             <div class="card-body">
 
-                <form th:action="@{/volunteers/update/{id}(id=${volunteer.id})}" method="post" id="editVolunteerForm" th:object="${volunteer}">
+                <form th:action="@{/volunteers/update/{id}(id=${volunteer.uuid})}" method="post" id="editVolunteerForm" th:object="${volunteer}">
                     <input type="hidden" name="uuid" id="uuid" th:field="*{uuid}">
-                    <input type="hidden" name="id" id="id" th:field="*{id}">
                     <div class="row">
                         <div class="col-md-6 col-lg-5 mb-4">
                             <div class="form-group">
@@ -47,15 +46,15 @@
                             </div>
                             <div class="d-flex flex-wrap" role="group" th:unless="${allMissionTypes.isEmpty()}">
                                 <div class="my-2 me-2" th:each="missionType:${allMissionTypes}">
-                                    <input th:id="${'btn-check-outlined' + missionType.id}"
-                                           th:value="${missionType.id}"
+                                    <input th:id="${'btn-check-outlined' + missionType.uuid}"
+                                           th:value="${missionType.uuid}"
                                            th:name="missionTypes" type="checkbox" class="btn-check" autocomplete="off"
                                            th:checked="${missionType.selected}"
                                     >
-                                    <label class="btn btn-outline-secondary" th:for="${'btn-check-outlined' + missionType.id}" th:text="${missionType.name}"></label><br>
+                                    <label class="btn btn-outline-secondary" th:for="${'btn-check-outlined' + missionType.uuid}" th:text="${missionType.name}"></label><br>
                                     <input type="hidden"
                                            th:name="missionTypeUuids"
-                                           th:id="${'missionTypeUuid-' + missionType.id}"
+                                           th:id="${'missionTypeUuid-' + missionType.uuid}"
                                            th:value="${missionType.uuid}"
                                     >
                                 </div>
@@ -67,7 +66,6 @@
                                 <hr>
                                 <div id="availabilitySection">
                                     <div th:each="availability, iterStat : *{availabilities}" class="availabilityRow row gy-2 gx-3 align-items-center mb-2">
-                                        <input type="hidden" th:field="*{availabilities[__${iterStat.index}__].id}" />
                                         <input type="hidden" th:field="*{availabilities[__${iterStat.index}__].uuid}" />
                                         <div class="col-auto">
                                             <label class="form-label-sm" th:for="${'availabilities' + iterStat.index + '.dayOfWeek'}">Jour :</label>
@@ -99,7 +97,6 @@
                                 <hr>
                                 <div id="unavailabilitySection">
                                     <th:block th:each="unavailability, stat : *{unavailabilities}">
-                                        <input type="hidden" th:field="*{unavailabilities[__${stat.index}__].id}" />
                                         <input type="hidden" th:field="*{unavailabilities[__${stat.index}__].uuid}" />
                                         <div class="unavailabilityRow row gy-2 gx-3 align-items-center mb-2">
                                             <div class="col-auto">
