refactor dto and persistence workflow

--- a/src/main/resources/templates/volunteers/volunteer/edit-volunteer.html
+++ b/src/main/resources/templates/volunteers/volunteer/edit-volunteer.html
@@ -96,16 +96,16 @@
                                 <h5>Indisponibilités</h5>
                                 <hr>
                                 <div id="unavailabilitySection">
-                                    <th:block th:each="unavailability, stat : *{unavailabilities}">
-                                        <input type="hidden" th:field="*{unavailabilities[__${stat.index}__].uuid}" />
+                                    <th:block th:each="unavailability, iterStat : *{unavailabilities}">
+                                        <input type="hidden" th:value="*{unavailabilities[__${iterStat.index}__].uuid}" />
                                         <div class="unavailabilityRow row gy-2 gx-3 align-items-center mb-2">
                                             <div class="col-auto">
-                                                <label class="form-label-sm" th:for="${'unavailabilities' + stat.index + '.startDate'}">Date de début :</label>
-                                                <input type="date" th:field="*{unavailabilities[__${stat.index}__].startDate}" class="form-control-sm" />
+                                                <label class="form-label-sm" th:for="${'unavailabilities' + iterStat.index + '.startDate'}">Date de début :</label>
+                                                <input type="date" th:field="*{unavailabilities[__${iterStat.index}__].startDate}" class="form-control-sm" />
                                             </div>
                                             <div class="col-auto">
-                                                <label class="form-label-sm" th:for="${'unavailabilities' + stat.index + '.endDate'}">Date de fin :</label>
-                                                <input type="date" th:field="*{unavailabilities[__${stat.index}__].endDate}" class="form-control-sm" />
+                                                <label class="form-label-sm" th:for="${'unavailabilities' + iterStat.index + '.endDate'}">Date de fin :</label>
+                                                <input type="date" th:field="*{unavailabilities[__${iterStat.index}__].endDate}" class="form-control-sm" />
                                             </div>
                                         </div>
                                     </th:block>
@@ -160,7 +160,7 @@
             availabilityDiv.innerHTML = `
             <div class="col-auto">
                 <label class="form-label-sm" for="availabilities[${index}].dayOfWeek">Jour :</label>
-                <select class="form-select-sm" name="availabilities[${index}].dayOfWeek" id="availabilities${index}.dayOfWeek" required="required">
+                <select class="form-select-sm" name="availabilities[${index}].dayOfWeek" required="required">
                     <option selected>Jour</option>
                     <option value="MONDAY">Lundi</option>
                     <option value="TUESDAY">Mardi</option>
@@ -173,11 +173,11 @@
             </div>
             <div class="col-auto">
                 <label class="form-label-sm" for="availabilities[${index}].startTime">Heure de début :</label>
-                <input class="form-control-sm" type="time" name="availabilities[${index}].startTime" id="availabilities[${index}].startTime"/>
+                <input class="form-control-sm" type="time" name="availabilities[${index}].startTime"/>
             </div>
             <div class="col-auto">
                 <label class="form-label-sm" for="availabilities[${index}].endTime">Heure de fin :</label>
-                <input class="form-control-sm" type="time" name="availabilities[${index}].endTime" id="availabilities[${index}].endTime"/>
+                <input class="form-control-sm" type="time" name="availabilities[${index}].endTime"/>
             </div>
         `;
 
@@ -188,6 +188,7 @@
             let icon = document.createElement('i');
             icon.className = 'bi bi-x-square';
             removeButton.appendChild(icon);
+
             removeButton.addEventListener('click', function() {
                 availabilityDiv.remove();
                 updateAvailabilityIndexes();
@@ -196,6 +197,7 @@
             let buttonCol = document.createElement('div');
             buttonCol.className = 'col-auto';
             buttonCol.appendChild(removeButton);
+
             availabilityDiv.appendChild(buttonCol);
             availabilitySection.appendChild(availabilityDiv);
         });
@@ -211,7 +213,6 @@
             availabilityRows.forEach((row, index) => {
                 row.querySelectorAll('select, input').forEach(input => {
                     input.name = input.name.replace(/\[\d+]/, `[${index}]`);
-                    input.id = input.id.replace(/\[\d+]/, index.toString());
                 });
 
                 if (!row.querySelector('.removeAvailability')) {
@@ -282,15 +283,15 @@
             let unavailabilityDiv = document.createElement('div');
             unavailabilityDiv.className = 'unavailabilityRow row gy-2 gx-3 align-items-center mb-2';
             unavailabilityDiv.innerHTML = `
-                <div class="col-auto">
-                    <label class="form-label-sm" for="unavailabilities${index}.startDate">Date de début :</label>
-                    <input class="form-control-sm" type="date" name="unavailabilities[${index}].startDate" id="unavailabilities${index}.startDate"/>
-                </div>
-                <div class="col-auto">
-                    <label class="form-label-sm" for="unavailabilities${index}.endDate">Date de fin :</label>
-                    <input class="form-control-sm" type="date" name="unavailabilities[${index}].endDate" id="unavailabilities${index}.endDate"/>
-                </div>
-            `;
+            <div class="col-auto">
+                <label class="form-label-sm" for="unavailabilities[${index}].startDate">Date de début :</label>
+                <input class="form-control-sm" type="date" name="unavailabilities[${index}].startDate" required="required"/>
+            </div>
+            <div class="col-auto">
+                <label class="form-label-sm" for="unavailabilities[${index}].endDate">Date de fin :</label>
+                <input class="form-control-sm" type="date" name="unavailabilities[${index}].endDate" required="required"/>
+            </div>
+        `;
 
             let removeButton = document.createElement('button');
             removeButton.type = 'button';
@@ -299,6 +300,7 @@
             let icon = document.createElement('i');
             icon.className = 'bi bi-x-square';
             removeButton.appendChild(icon);
+
             removeButton.addEventListener('click', function() {
                 unavailabilityDiv.remove();
                 updateUnavailabilityIndexes();
@@ -307,6 +309,7 @@
             let buttonCol = document.createElement('div');
             buttonCol.className = 'col-auto';
             buttonCol.appendChild(removeButton);
+
             unavailabilityDiv.appendChild(buttonCol);
             unavailabilitySection.appendChild(unavailabilityDiv);
 
@@ -324,7 +327,6 @@
             unavailabilityRows.forEach((row, index) => {
                 row.querySelectorAll('select, input').forEach(input => {
                     input.name = input.name.replace(/\[\d+]/, `[${index}]`);
-                    input.id = input.id.replace(/\d+/, index.toString());
                 });
                 if (!row.querySelector('.removeUnavailability')) {
                     let removeButton = document.createElement('button');
@@ -354,10 +356,10 @@
                 const startDate = row.querySelector('input[name$=".startDate"]').value;
                 const endDate = row.querySelector('input[name$=".endDate"]').value;
 
-                if (!startDate || !endDate || new Date(startDate) > new Date(endDate)) {
+                if (!startDate || !endDate || startDate > endDate) {
                     isValid = false;
                 } else {
-                    unavailabilities.push({startDate: new Date(startDate), endDate: new Date(endDate)});
+                    unavailabilities.push({startDate, endDate});
                 }
             });
 
