--- a/src/main/resources/templates/mission-types/mission-types.html
+++ b/src/main/resources/templates/mission-types/mission-types.html
@@ -42,8 +42,8 @@
                                         <td>
                                             <!-- Editer -->
                                             <a class="btn btn-primary btn-sm" th:href="@{/mission-types/edit/{id}(id=${missionType.uuid})}"><i class="bi bi-pencil-square"></i></a>
-                                            <!-- Supprimer -->
-                                            <!--<a class="btn btn-danger btn-sm" th:href="@{/mission-types/delete/{id}(id=${m.id})}"><i class="bi bi-trash"></i></a>-->
+                                            <!-- Désactiver -->
+                                            <a class="btn btn-danger btn-sm" th:href="@{/mission-types/deactivate/{id}(id=${missionType.uuid})}"><i class="bi bi-trash"></i></a>
                                             <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteMissionTypeModal" th:attr="data-missionType-id=${missionType.uuid}"><i class="bi bi-trash"></i></button>
                                         </td>
                                     </tr>
