--- a/src/main/resources/templates/mission-types/mission-types.html
+++ b/src/main/resources/templates/mission-types/mission-types.html
@@ -32,6 +32,7 @@
                                     <tr>
                                         <th>Nom</th>
                                         <th>Description</th>
+                                        <th>Statut</th>
                                         <th>Actions</th>
                                     </tr>
                                     </thead>
@@ -39,11 +40,14 @@
                                     <tr th:each="missionType:${missionTypes}">
                                         <td th:text="${missionType.name}"></td>
                                         <td th:text="${missionType.description}"></td>
+                                        <td th:text="${missionType.active} ? 'Actif' : 'Inactif'"></td>
                                         <td>
                                             <!-- Editer -->
                                             <a class="btn btn-primary btn-sm" th:href="@{/mission-types/edit/{id}(id=${missionType.uuid})}"><i class="bi bi-pencil-square"></i></a>
                                             <!-- Désactiver -->
-                                            <a class="btn btn-danger btn-sm" th:href="@{/mission-types/deactivate/{id}(id=${missionType.uuid})}"><i class="bi bi-trash"></i></a>
+                                            <button th:if="${missionType.active}" type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deactivationMissionTypeModal" th:attr="data-missionType-id=${missionType.uuid}"><i class="bi bi-plug"></i></button>
+                                            <button th:unless="${missionType.active}" type="button" class="btn btn-sm btn-success" data-bs-toggle="modal" data-bs-target="#activationMissionTypeModal" th:attr="data-missionType-id=${missionType.uuid}"><i class="bi bi-plug-fill"></i></button>
+                                            <!--Supprimer-->
                                             <button type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteMissionTypeModal" th:attr="data-missionType-id=${missionType.uuid}"><i class="bi bi-trash"></i></button>
                                         </td>
                                     </tr>
@@ -64,6 +68,8 @@
     </div>
     <div th:replace="~{fragments/modals/message-modal :: message-modal}"></div>
     <div th:replace="~{fragments/modals/delete-mission-type-modal :: delete-mission-type-modal}"></div>
+    <div th:replace="~{fragments/modals/deactivation-mission-type-modal :: deactivation-mission-type-modal}"></div>
+    <div th:replace="~{fragments/modals/activation-mission-type-modal :: activation-mission-type-modal}"></div>
 
 
     <div th:replace="~{fragments/scripts :: scripts}"></div>
