start implementing confirm mission controller

--- a/src/main/resources/templates/mission-types/no-mission-type.html
+++ b/src/main/resources/templates/mission-types/no-mission-type.html
@@ -15,9 +15,10 @@
                         <hr />
                         <div class="card">
                             <div class="card-header">
-                                <i class="bi bi-exclamation-triangle-fill">
+                                <i class="bi bi-exclamation-triangle-fill fs-2">
+                                    <span>Alerte</span>
                                 </i>
-                                <h2>Alerte</h2>
+
                             </div>
                             <div class="card-body">
                                 <p th:text="${message}"></p>
