--- a/src/main/resources/templates/missions/confirmed-mission/create-confirmed-mission.html
+++ b/src/main/resources/templates/missions/confirmed-mission/create-confirmed-mission.html
@@ -27,6 +27,9 @@
 
                     <input type="hidden" name="uuid" id="uuid" th:field="*{uuid}">
                     <input type="hidden" name="status" id="status" th:field="*{status}">
+                    <input type="hidden" name="missionTypeUuid" id="missionTypeUuid" th:field="*{missionType.uuid}">
+                    <input type="hidden" name="missionTypeActive" id="missionTypeActive" th:field="*{missionType.active}">
+                    <input type="hidden" name="missionTypeSelected" id="missionTypeSelected" th:field="*{missionType.selected}">
                     <input type="hidden" th:field="*{title}" id="name">
                     <input type="hidden" th:field="*{missionType}" id="missionType">
                     <input type="hidden" th:field="*{description}" id="description" >
