--- a/src/main/resources/templates/missions/planned-mission/create-planned-mission.html
+++ b/src/main/resources/templates/missions/planned-mission/create-planned-mission.html
@@ -26,9 +26,12 @@
                 <form th:action="@{/missions/plan/{id}(id=${mission.uuid})}" method="post" id="planMissionForm" th:object="${mission}">
 
                     <input type="hidden" name="uuid" id="uuid" th:field="*{uuid}">
+                    <input type="hidden" name="missionTypeUuid" id="missionTypeUuid" th:field="*{missionType.uuid}">
+                    <input type="hidden" name="missionTypeActive" id="missionTypeActive" th:field="*{missionType.active}">
+                    <input type="hidden" name="missionTypeSelected" id="missionTypeSelected" th:field="*{missionType.selected}">
                     <input type="hidden" name="status" id="status" th:field="*{status}">
                     <input type="hidden" th:field="*{title}" id="name">
-                    <input type="hidden" th:field="*{missionType}" id="missionType">
+                    <input type="hidden" th:value="*{missionType}" id="missionType">
                     <input type="hidden" th:field="*{description}" id="description" >
                     <input type="hidden" th:field="*{comment}" id="comment">
                     <input type="hidden" th:field="*{requiredVolunteerNumber}" id="requiredVolunteerNumber">
@@ -38,11 +41,11 @@
                     </div>
                     <div class="form-group">
                         <label for="startDateTime" class="col-form-label">Date de Début:</label>
-                        <input th:value="*{startDateTime}" id="startDateTime" name="startDateTime" type="datetime-local" class="form-control" required="required">
+                        <input th:field="*{startDateTime}" id="startDateTime" name="startDateTime" type="datetime-local" class="form-control" required="required">
                     </div>
                     <div class="form-group">
                         <label for="endDateTime" class="col-form-label">Date de Fin:</label>
-                        <input th:value="*{endDateTime}" type="datetime-local" id="endDateTime" name="endDateTime" class="form-control" required="required">
+                        <input th:field="*{endDateTime}" type="datetime-local" id="endDateTime" name="endDateTime" class="form-control" required="required">
                     </div>
                 </form>
             </div>
