add status translation

--- a/src/main/resources/templates/fragments/missions/completed-missions.html
+++ b/src/main/resources/templates/fragments/missions/completed-missions.html
@@ -34,7 +34,7 @@
                     <tr th:each="completedMission:${completedMissions}">
                         <td th:text="${completedMission.title}"></td>
                         <td th:text="${completedMission.missionType.name}"></td>
-                        <td th:text="${completedMission.status}"></td>
+                        <td th:text="${@translationUtils.translateMissionStatus(completedMission.status)}"></td>
                         <td th:text="${#temporals.format(completedMission.startDateTime, 'dd/MM/yyyy HH:mm')}"></td>
                         <td th:text="${#temporals.format(completedMission.endDateTime, 'dd/MM/yyyy HH:mm')}"></td>
                         <td>
