--- a/src/main/resources/templates/missions/view-mission.html
+++ b/src/main/resources/templates/missions/view-mission.html
@@ -21,7 +21,7 @@
                         <div class="card-body">
                             <p>Description : <span th:text="${mission.description}"></span></p>
                             <p th:text="${mission.comment}"></p>
-                            <p th:text="${mission.status}"></p>
+                            <p th:text="${@translationUtils.translateMissionStatus(mission.status)}"></p>
                             <p th:text="${mission.missionType.name}"></p>
                             <p th:text="${#temporals.format(mission.startDateTime, 'dd.MM.yyyy HH:mm')}"></p>
                             <p th:text="${#temporals.format(mission.endDateTime, 'dd.MM.yyyy HH:mm')}"></p>
