--- a/src/main/resources/templates/fragments/missions/cancelled-missions.html
+++ b/src/main/resources/templates/fragments/missions/cancelled-missions.html
@@ -34,7 +34,7 @@
                     <tr th:each="cancelledMission:${cancelledMissions}">
                         <td th:text="${cancelledMission.title}"></td>
                         <td th:text="${cancelledMission.missionType.name}"></td>
-                        <td th:text="${cancelledMission.status}"></td>
+                        <td th:text="${@translationUtils.translateMissionStatus(cancelledMission.status)}"></td>
                         <td th:text="${#temporals.format(cancelledMission.startDateTime, 'dd/MM/yyyy HH:mm')}"></td>
                         <td th:text="${#temporals.format(cancelledMission.endDateTime, 'dd/MM/yyyy HH:mm')}"></td>
                         <td>
